# KinematicController

./: README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/o1/lib/o1/: controller1  main1
install/o1/share/ament_index/resource_index/package_run_dependencies/: o1
install/o1/share/ament_index/resource_index/parent_prefix_path/: o1
install/o1/share/o1/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/o1/share/o1/cmake/: o1Config-version.cmake  o1Config.cmake
install/o1/share/o1/environment/: ament_prefix_path.dsv  path.dsv
install/simulation_pkg/lib/simulation_pkg/: hardware  kinematic_controller
install/simulation_pkg/share/simulation_pkg/: package.sh
log/: latest_build
src/o1/: CMakeLists.txt
src/o1/src/: main1.cpp
src/simulation_pkg/: setup.py
src/simulation_pkg/simulation_pkg/: hardware.py  kinematic_controller.py  robot_sim.py
